# pme-docs

./: .buildinfo  .gitignore  CLAUDE.md  DEPLOYMENT.md  PLAN.md  README.md  build_docs.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  start_autobuild.sh
.claude/: COMMIT_RULES.md  README.md  hooks.json  settings.local.json  terminology.json
.claude/commands/: build-preview.md  check-source-changes.md  (+6 more)
.doctrees/: index.doctree
.github/: FUNDING.yml
_sources/: index.md.txt  index.rst.txt
_static/: documentation_options.js
docs/: Makefile
editors/: _modal_operator_editor.html  _popup_dialog_editor.html  _property_editor.html  _ui_customization.html  custom_icons.html  editor_common_elements.html  hiding_unused_panels.html  macro_operator_editor.html  modal_operator_editor.html  pie_menu_editor.html  popup_dialog_editor.html  property_editor.html  regular_menu_editor.html  settings.html  side_panel_editor.html  stack_key_editor.html  sticky_key_editor.html  ui_customization.html
getting_started/: _feature_overview.html  feature_overview.html  installation.html  quick_tutorial.html
ja/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
reference/: _scripting.html  boot_options.html  developer_options.html  examples.html  file_locations.html  keymap_duplicates.html  public_api.html  scripting.html  terminology.html
schema/: pme2-2.0.json
support_community/: changelog.html  contribute_to_pme.html  faq.html  get_support.html  known_issues.html
updates/: stable.json
(+273 files in other folders)
