[project]
name = "pme-docs"
version = "1.18.9"
description = "Documentation for Pie Menu Editor (PME) Blender addon"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-design>=0.5.0",
    "sphinx-autobuild>=2021.3.14",
    "furo>=2024.1.0",
    "sphinxcontrib-mermaid>=0.9.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-tabs>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "sphinx-autobuild>=2021.3.14",
]

[tool.uv.sources]
# This is a documentation project, not a Python package
pme-docs = { workspace = false }
